// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LightspeedAuth should render a basic component: basic 1`] = `
<div>
  <Bullseye>
    <EmptyState
      headingLevel="h2"
      icon={[Function]}
      titleText="t([
  "external-auth.lightspeed.flow",
  {
    "context": "body-initiated"
  }
])"
    />
  </Bullseye>
</div>
`;

exports[`LightspeedAuth should render a component after authentication failed: errored 1`] = `
<div>
  <Bullseye>
    <EmptyState
      headingLevel="h2"
      icon={[Function]}
      titleText="t([
  "external-auth.lightspeed.flow",
  {
    "context": "header-errored"
  }
])"
    >
      <EmptyStateBody>
        <Trans
          components={
            [
              <p />,
              <p />,
            ]
          }
          context="body-errored"
          i18nKey="external-auth.lightspeed.flow"
          values={
            {
              "msg": "Lorem ipsum dolor sit",
            }
          }
        />
      </EmptyStateBody>
    </EmptyState>
  </Bullseye>
</div>
`;

exports[`LightspeedAuth should render a component after authentication succeeded: success 1`] = `
<div>
  <Bullseye>
    <EmptyState
      headingLevel="h2"
      icon={[Function]}
      titleText="t([
  "external-auth.lightspeed.flow",
  {
    "context": "header-successful"
  }
])"
    >
      <EmptyStateBody>
        t([
  "external-auth.lightspeed.flow",
  {
    "context": "body-successful"
  }
])
      </EmptyStateBody>
    </EmptyState>
  </Bullseye>
</div>
`;

exports[`LightspeedAuth should render component waiting for authorization: waiting-for-user 1`] = `
<div>
  <Bullseye>
    <EmptyState
      headingLevel="h2"
      icon={[Function]}
      titleText="t([
  "external-auth.lightspeed.flow",
  {
    "context": "header-awaiting-authorization",
    "appName": "Quipucords"
  }
])"
    >
      <EmptyStateBody>
        <p>
          t([
  "external-auth.lightspeed.flow",
  {
    "context": "body-awaiting-authorization",
    "appName": "Quipucords"
  }
])
        </p>
        <p
          className="pf-v6-u-mt-xl"
        >
          <Button
            component="a"
            href="https://sso.redhat.com/device?user_code=ABCD-EFGH"
            size="lg"
            target="_blank"
            variant="primary"
          >
            t([
  "external-auth.lightspeed.flow",
  {
    "context": "body-awaiting-authorization-button"
  }
])
          </Button>
        </p>
      </EmptyStateBody>
    </EmptyState>
  </Bullseye>
</div>
`;
